--- a/styles.css
+++ b/styles.css
@@ -128,11 +128,12 @@ a {
   object-fit: contain;
 }
 #lista-productos {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 25px;
-  justify-content: center;
+  margin-top: 30px;
 }
+
 
 
 /* BENEFICIOS */
@@ -176,20 +177,21 @@ footer {
 }
 
 /* CARRITO */
-.carrito {
-  display: none;
+#carrito {
   position: fixed;
-  top: 100px;
-  right: 40px;
-  width: 320px;
-  max-height: 70vh;
-  overflow-y: auto;
+  top: 0;
+  right: 0;
+  width: 350px;
+  height: 100vh;
   background: white;
+  box-shadow: -5px 0 20px rgba(0,0,0,0.1);
   padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-  font-size: 14px;
+  overflow-y: auto;
+  transform: translateX(100%);
+  transition: transform 0.3s ease;
+  z-index: 1000;
 }
+
 
 .item-carrito {
   border-bottom: 1px solid #787000;
@@ -337,12 +339,12 @@ footer {
 }
 @media (max-width: 768px) {
 
-  #lista-productos {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
-    padding: 10px;
-  }
+#lista-productos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 25px;
+  margin-top: 30px;
+}
 
   .card {
     width: 100%;
@@ -378,9 +380,23 @@ h2 {
   max-width: 1200px;
   margin: auto;
 }
+#carrito.activo {
+  transform: translateX(0);
+}
+@media (max-width: 768px) {
 
+  #carrito {
+    width: 100%;
+  }
 
-
-
-
+}
+.cerrar-carrito {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
 
